// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox styled components StyledCheckmark : has correct styles when  1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": null,
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError 1`] = `
Object {
  ":active": Object {
    "backgroundColor": null,
  },
  ":hover": Object {
    "backgroundColor": null,
  },
  "backgroundColor": "$theme.colors.negative400",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isFocused 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono500",
  },
  "backgroundColor": "$theme.colors.mono500",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isIndeterminate 1`] = `
Object {
  ":active": Object {
    "backgroundColor": null,
  },
  ":hover": Object {
    "backgroundColor": null,
  },
  "backgroundColor": "$theme.colors.primary400",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"2\\" viewBox=\\"0 0 12 2\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><line x1=\\"1\\" y1=\\"-1\\" x2=\\"11\\" y2=\\"-1\\" transform=\\"translate(0 2)\\" stroke=\\"white\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when checked 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": null,
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when disabled 1`] = `
Object {
  ":active": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  ":hover": Object {
    "backgroundColor": "$theme.colors.mono400",
  },
  "backgroundColor": null,
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale200",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale200",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledInput : StyledInput has correct styles 1`] = `
Object {
  "margin": 0,
  "opacity": 0,
  "overflow": "hidden",
  "padding": 0,
  "width": 0,
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when  1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when $isError 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when disabled 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to bottom 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingBottom": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to left 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingLeft": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to right 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingRight": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to top 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "fontFamily": "$theme.typography.font400.fontFamily",
  "fontSize": "$theme.typography.font400.fontSize",
  "fontWeight": "$theme.typography.font400.fontWeight",
  "lineHeight": "$theme.typography.font400.lineHeight",
  "paddingTop": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledRoot : StyledRoot has correct styles 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedbottom 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedleft 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedright 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedtop 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
}
`;
